構成の変更

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,20 +3,21 @@
 cmake_minimum_required(VERSION 3.00)
 
 # プロジェクト名
-project(HelloWorld)
+project(CmakeCpp)
 
 # 出力するバイナリ
-add_executable(HelloWorld)
+set (TARGET_NAME CmakeCpp)
+add_executable(${TARGET_NAME})
 
 # C++17を使用する
-set_target_properties(HelloWorld
+set_target_properties(${TARGET_NAME}
 	PROPERTIES
 		CXX_STANDARD 17
 		CXX_STANDARD_REQUIRED ON
 )
 
 # ソースファイル
-target_sources(HelloWorld
+target_sources(${TARGET_NAME}
 	PRIVATE
 		main.cpp
 )
