C++23でモジュール、標準ライブラリモジュールを試す

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,21 @@ project(CmakeCpp)
 set (TARGET_NAME CmakeCpp)
 add_executable(${TARGET_NAME})
 
-# C++17を使用する
+# C++23を使用する
 set_target_properties(${TARGET_NAME}
 	PROPERTIES
-		CXX_STANDARD 17
+		CXX_STANDARD 23
 		CXX_STANDARD_REQUIRED ON
 )
+
+# VisualStudio2022内のstd.ixxをビルド対象に含めないと標準ライブラリモジュールが使えない
+# フルパスを直に書くとインストール場所が異なる人はビルドできない
+# 動的に取得できないか？
 
 # ソースファイル
 target_sources(${TARGET_NAME}
 	PRIVATE
+		"C:/Program Files/Microsoft Visual Studio/2022/Professional/VC/Tools/MSVC/14.37.32822/modules/std.ixx"
 		main.cpp
+		"hello.ixx"
 )
