rcファイルを作成したは良いが成果物に反映されない

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,21 +2,22 @@
 
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
-add_library(Hello SHARED)
+add_library(CmakeDll SHARED)
 
-set_target_properties(Hello PROPERTIES
-	VERSION {VERSION}
+set_target_properties(CmakeDll PROPERTIES
+	VERSION {PROJECT_VERSION}
 )
 
-target_sources(Hello PRIVATE 
+target_sources(CmakeDll PRIVATE 
 	"hello.cpp"
+	${CMAKE_BINARY_DIR}/version.rc
 )
 
-target_include_directories(Hello PUBLIC
+target_include_directories(CmakeDll PUBLIC
 	"${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
-install (TARGETS Hello
+install (TARGETS CmakeDll
 	RUNTIME DESTINATION bin
 	LIBRARY DESTINATION lib
 	ARCHIVE DESTINATION lib
