--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,27 @@
 # cmakeに要求する最低バージョン
 cmake_minimum_required(VERSION 3.00)
 
-# プロジェクト名
-project(CmakeCpp LANGUAGES CXX VERSION 1.0.0)
-
-# 出力するバイナリ
-set (TARGET_NAME CmakeCpp)
-add_executable(${TARGET_NAME})
-
 # バージョン
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 0)
 set(VERSION_PATCH 0)
 set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
-set_target_properties(${TARGET_NAME} PROPERTIES VERSION ${VERSION})
+
+# プロジェクト名
+project(CmakeProject LANGUAGES CXX VERSION ${VERSION})
+
+# rcファイル生成
+configure_file(
+	${CMAKE_SOURCE_DIR}/version.rc.in
+	${CMAKE_BINARY_DIR}/version.rc
+	@ONLY
+)
+
+# 出力するバイナリ
+set (TARGET_NAME CmakeExe)
+add_executable(${TARGET_NAME})
+
+set_target_properties(${TARGET_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 
 # C++17を使用する
 set_target_properties(${TARGET_NAME}
@@ -27,12 +35,13 @@ set_target_properties(${TARGET_NAME}
 target_sources(${TARGET_NAME}
 	PRIVATE
 		main.cpp
+		${CMAKE_BINARY_DIR}/version.rc
 )
 
 # リンク
 target_link_libraries(${TARGET_NAME}
 	PRIVATE
-		Hello
+		CmakeDll
 )
 
 # インストール
