サンプルを動かして見た

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,10 @@ project(CmakeCpp)
 set (TARGET_NAME CmakeCpp)
 add_executable(${TARGET_NAME})
 
-# C++17を使用する
+# C++23を使用する
 set_target_properties(${TARGET_NAME}
 	PROPERTIES
-		CXX_STANDARD 17
+		CXX_STANDARD 23
 		CXX_STANDARD_REQUIRED ON
 )
 
@@ -20,4 +20,4 @@ set_target_properties(${TARGET_NAME}
 target_sources(${TARGET_NAME}
 	PRIVATE
 		main.cpp
-)
+ "async.h" "async.cpp")
