バージョン情報が反映されるように修正

--- a/version.rc.in
+++ b/version.rc.in
@@ -1,5 +1,7 @@
 // version.rc.in
 
+#include "winres.h"
+
 #define VER_FILEVERSION             @PROJECT_VERSION_MAJOR@,@PROJECT_VERSION_MINOR@,@PROJECT_VERSION_PATCH@
 #define VER_FILEVERSION_STR         "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@\0"
 
