--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,10 @@ set_target_properties(${TARGET_NAME}
 target_sources(${TARGET_NAME}
 	PRIVATE
 		main.cpp
- "DriveChekcer1.cpp" "DriveChekcer1.h" "common.h" "common.cpp")
+ "DriveChekcer1.cpp" "DriveChekcer1.h" "common.h" "common.cpp" "DriveChecker2.h" "DriveChecker2.cpp" "DriveChecker3.h" "DriveChecker3.cpp")
+
+ target_link_libraries(${TARGET_NAME}
+ PRIVATE
+		Mpr
+		Shlwapi
+	)
