--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,16 +14,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup MSVC
-      uses: microsoft/setup-msbuild@v1.3
-      
     - name: Setup CMake
       uses: jwlawson/actions-setup-cmake@v1.14
       with:
         cmake-version: '3.14.x'
         
     - name: Configure CMake
-      run: cmake -B build -G "Visual Studio 17 2022" -A x64
+      run: cmake -B build -DCMAKE_BUILD_TYPE=Debug
       
     - name: Build
       run: cmake --build build --config Debug
