--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,3 +40,24 @@ jobs:
           build/Testing/
           build/**/*.exe
         retention-days: 30
+        
+  build-and-test-linux:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y cmake build-essential
+        
+    - name: Configure CMake
+      run: cmake -B build -DCMAKE_BUILD_TYPE=Debug
+      
+    - name: Build
+      run: cmake --build build --config Debug
+      
+    - name: Run Tests
+      run: ctest --test-dir build -C Debug --output-on-failure --verbose
